--- a/Actions/VerifyPRChanges/action.yaml
+++ b/Actions/VerifyPRChanges/action.yaml
@@ -6,23 +6,23 @@ inputs:
     required: false
     default: powershell
   baseSHA:
-    description: Base SHA for the Pull Request
+    description: Base commit of the PR
     required: false
     default: ${{ github.event.pull_request.base.sha }}
   headSHA:
-    description: Head SHA for the Pull Request
+    description: Head commit of the PR
     required: false
     default: ${{ github.event.pull_request.head.sha }}
-  prHeadRepository:
-    description: Name of the repository
-    required: false
-    default: ${{ github.event.pull_request.head.repo.full_name }}
   prBaseRepository:
-    description: Name of the repository
+    description: The name of the repository the PR is going to
     required: false
     default: ${{ github.event.pull_request.base.repo.full_name }}
+  prHeadRepository:
+    description: The name of the repository the PR is coming from
+    required: false
+    default: ${{ github.event.pull_request.head.repo.full_name }}
   githubapiurl:
-    description: Github API URL
+    description: The URL of the GitHub API
     required: false
     default: ${{ github.api_url }}
 runs:
@@ -36,7 +36,13 @@ runs:
     - name: Determine Changed Files
       shell: ${{ inputs.shell }}
       id: ChangedFiles
-      run: ${{ github.action_path }}/VerifyPRChanges.ps1 -baseSHA ${{ inputs.baseSHA }} -headSHA ${{ inputs.headSHA }} -prHeadRepository ${{ inputs.prHeadRepository }} -prBaseRepository ${{ inputs.prBaseRepository }} -githubapiurl ${{ inputs.githubapiurl }}
+      env:
+        _BASE_SHA: ${{ inputs.baseSHA }}
+        _HEAD_SHA: ${{ inputs.headSHA }}
+        _PR_HEAD_REPOSITORY: ${{ inputs.prHeadRepository }}
+        _PR_BASE_REPOSITORY: ${{ inputs.prBaseRepository }}
+        _GITHUB_API_URL: ${{ inputs.githubapiurl }}
+      run: ${{ github.action_path }}/VerifyPRChanges.ps1 -BaseSHA $ENV:_BASE_SHA -HeadSHA $ENV:_HEAD_SHA -PRHeadRepository $ENV:_PR_HEAD_REPOSITORY -PRBaseRepository $ENV:_PR_BASE_REPOSITORY -GitHubAPIUrl $ENV:_GITHUB_API_URL
 
 branding:
   icon: terminal
