--- a/Actions/VerifyPRChanges/action.yaml
+++ b/Actions/VerifyPRChanges/action.yaml
@@ -25,25 +25,23 @@ inputs:
     description: The URL of the GitHub API
     required: false
     default: ${{ github.api_url }}
+  githubToken:
+    description: The token to use for the GitHub API
+    required: false
+    default: ${{ github.token }}
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v3
-      with:
-        lfs: true
-        ref: ${{ inputs.headSHA }}
-    
-    - name: Determine Changed Files
+    - name: run
       shell: ${{ inputs.shell }}
-      id: ChangedFiles
       env:
-        _BASE_SHA: ${{ inputs.baseSHA }}
-        _HEAD_SHA: ${{ inputs.headSHA }}
-        _PR_HEAD_REPOSITORY: ${{ inputs.prHeadRepository }}
-        _PR_BASE_REPOSITORY: ${{ inputs.prBaseRepository }}
-        _GITHUB_API_URL: ${{ inputs.githubapiurl }}
-      run: ${{ github.action_path }}/VerifyPRChanges.ps1 -BaseSHA $ENV:_BASE_SHA -HeadSHA $ENV:_HEAD_SHA -PRHeadRepository $ENV:_PR_HEAD_REPOSITORY -PRBaseRepository $ENV:_PR_BASE_REPOSITORY -GitHubAPIUrl $ENV:_GITHUB_API_URL
-
+        _baseSHA: ${{ inputs.baseSHA }}
+        _headSHA: ${{ inputs.headSHA }}
+        _prBaseRepository: ${{ inputs.prBaseRepository }}
+        _prHeadRepository: ${{ inputs.prHeadRepository }}
+        _githubapiurl: ${{ inputs.githubapiurl }}
+        _githubToken: ${{ inputs.githubToken }}
+      run: try { ${{ github.action_path }}/VerifyPRChanges.ps1 -baseSHA $ENV:_baseSHA -headSHA $ENV:_headSHA -prBaseRepository $ENV:_prBaseRepository -prHeadRepository $ENV:_prHeadRepository -githubApiUrl $ENV:_githubApiUrl -githubToken $ENV:_githubToken } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
