--- a/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
@@ -20,6 +20,11 @@ jobs:
     if: ${{ github.event.pull_request.base.repo.full_name != github.event.pull_request.head.repo.full_name}}
     runs-on: [ windows-latest ]
     steps:
+      - uses: actions/checkout@v3
+        with:
+        lfs: true
+        ref:  ${{ github.event.pull_request.head.sha }}
+
       - uses: aholstrup1/AL-Go-Actions/VerifyPRChanges@main
         with:
           baseSHA: ${{ github.event.pull_request.base.sha }}
