Update casing in github action

--- a/Actions/DetermineBuildOrder/action.yaml
+++ b/Actions/DetermineBuildOrder/action.yaml
@@ -27,7 +27,7 @@ runs:
         _buildOrderJson: ${{ inputs.buildOrderJson }}
         _buildOrderDepth: ${{ inputs.buildOrderDepth }}
         _workflowDepth: ${{ inputs.workflowDepth }}
-      run: try { ${{ github.action_path }}/DetermineBuildOrder.ps1 -projectsJson $ENV:_projectsJson -buildOrderJson $ENV:_buildOrderJson -buildOrderDepth $ENV:_BuildOrderDepth -workflowDepth $ENV:_WorkflowDepth } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
+      run: try { ${{ github.action_path }}/DetermineBuildOrder.ps1 -projectsJson $ENV:_projectsJson -buildOrderJson $ENV:_buildOrderJson -buildOrderDepth $ENV:_buildOrderDepth -workflowDepth $ENV:_workflowDepth } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
