Add test for al-go action origin

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,3 +20,7 @@ jobs:
       - name: Run Tests
         run: |
           . (Join-Path "." "Tests/runtests.ps1")
+
+      - name: Test AL-GO Action Origins
+        run: |
+          . (Join-Path "." "Tests/ActionOrigin.Test.ps1")
