Update Action origin test

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,13 +20,8 @@ jobs:
       - name: Run Tests
         run: |
           . (Join-Path "." "Tests/runtests.ps1")
-  
-  TestALGOActionOrigins:
-    name: Test ALGO Action Origins
-    runs-on: [ ubuntu-latest ]
-    steps:
-      - uses: actions/checkout@v3
 
       - name: Test AL-GO Action Origins
+        if: github.repository_owner == 'microsoft'
         run: |
-          . (Join-Path "." "Tests/ActionOrigin.Test.ps1")
+          . (Join-Path "." "Tests/ActionOriginTest/ActionOrigin.Test.ps1")
