--- a/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
@@ -233,6 +233,7 @@ jobs:
   PostProcess:
     runs-on: [ windows-latest ]
     needs: [ Initialization, Build ]
+    if: ${{ !failure() }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
