--- a/Templates/AppSource App/.github/workflows/PullRequestHandler.yaml
+++ b/Templates/AppSource App/.github/workflows/PullRequestHandler.yaml
@@ -233,7 +233,7 @@ jobs:
   PostProcess:
     runs-on: [ windows-latest ]
     needs: [ Initialization, Build ]
-    if: ${{ !failure() }}
+    if: (!cancelled())
     steps:
       - name: Checkout
         uses: actions/checkout@v3
