--- a/Templates/AppSource App/.github/workflows/CICD.yaml
+++ b/Templates/AppSource App/.github/workflows/CICD.yaml
@@ -9,6 +9,8 @@ on:
       - '!.github/workflows/CICD.yaml'
     branches: [ 'main', 'release/*', 'feature/*' ]
 
+run-name: 'CI/CD: ${{github.event.head_commit.message}}'
+
 defaults:
   run:
     shell: powershell
