--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -62,7 +62,7 @@ jobs:
           
       - name: Load Build Projects
         id: loadProjects
-        uses: mazhelez/AL-Go/Actions/LoadProjects@build-modes-per-project
+        uses: microsoft/AL-Go-Actions/LoadProjects@main
         with:
           shell: powershell
 
