--- a/Actions/LoadProjects/action.yaml
+++ b/Actions/LoadProjects/action.yaml
@@ -9,6 +9,9 @@ outputs:
   ProjectsJson:
     description: An array of AL-Go projects in compressed JSON format
     value: ${{ steps.loadProjects.outputs.ProjectsJson }}
+  ProjectDependenciesJson:
+    description: An object that holds the project dependencies in compressed JSON format
+    value: $ {{ steps.loadProjects.outputs.ProjectDependenciesJson }}
   BuildOrderJson: 
     description: TODO
     value: ${{ steps.LoadProjects.outputs.BuildOrderJson }}
