--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -242,6 +242,7 @@ jobs:
           buildMode: ${{ matrix.buildMode }}
 
       - name: Calculate Artifact names
+        id: calculateArtifactsNames
         uses: microsoft/AL-Go-Actions/CalculateArtifactNames@main
         if: success() || failure()
         with:
@@ -250,20 +251,12 @@ jobs:
           project: ${{ matrix.project }}
           buildMode: ${{ matrix.buildMode }}
           branchName: ${{ github.ref_name }}
-          
-      - name: Calculate Sanitized Project name
-        id: sanitizedProjectName      
-        run: |
-          $project = '${{ matrix.project }}'
-          $projectName = $project.Replace('\','_').Replace('/','_')
-          Write-Host "Sanitized project name: $projectName"
-          Add-Content -Path $env:GITHUB_OUTPUT -Value "sanitizedProjectName=$projectName"
 
       - name: Upload thisbuild artifacts - apps
         if: env.workflowDepth > 1
         uses: actions/upload-artifact@v3
         with:
-          name: 'thisbuild-${{ steps.sanitizedProjectName.outputs.sanitizedProjectName }}-${{ env.BuildMode }}Apps'
+          name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildAppsArtifactsName }}
           path: '${{ matrix.project }}/.buildartifacts/Apps/'
           if-no-files-found: ignore
           retention-days: 1
@@ -272,7 +265,7 @@ jobs:
         if: env.workflowDepth > 1
         uses: actions/upload-artifact@v3
         with:
-          name: 'thisbuild-${{ steps.sanitizedProjectName.outputs.sanitizedProjectName }}-${{ env.BuildMode }}TestApps'
+          name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildTestAppsArtifactsName }}
           path: '${{ matrix.project }}/.buildartifacts/TestApps/'
           if-no-files-found: ignore
           retention-days: 1
